# CutSceneAI-Studio

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
adapters/unreal/: README.md  pyproject.toml
adapters/unreal/examples/: import_office_dialogue.py  office-dialogue.unreal.json
adapters/unreal/plugin/: README.md
adapters/unreal/python/: README.md
adapters/unreal/schemas/: unreal-sequencer-plan-v0.1.schema.json  unreal-sequencer-plan-v0.2.schema.json  unreal-sequencer-plan-v0.3.schema.json  unreal-sequencer-plan-v0.4.schema.json  unreal-sequencer-plan-v0.5.schema.json  unreal-sequencer-plan-v0.6.schema.json
adapters/unreal/scripts/: export_artifacts.py
adapters/unreal/src/cutsceneai_unreal/: __init__.py  compiler.py  conversion.py  dialogue_import.py  models.py  rendering.py  schema.py  serialization.py
adapters/unreal/tests/: README.md  conftest.py  test_conversion.py  test_dialogue_import.py  test_unreal_compiler.py  test_unreal_rendering.py  test_unreal_schema.py
agents/asset_resolver/: README.md
agents/cinematography/: README.md
agents/critic/: README.md
agents/director/: README.md
agents/environment/: README.md
agents/performance/: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  cir.py  cir_errors.py  dialogue.py  director.py  preview.py  unreal.py
backend/app/models/: __init__.py  cir.py  dialogue.py  director.py
backend/app/services/: __init__.py  director.py  openai_director.py  openai_speech.py
backend/tests/: README.md  test_cir_api.py  test_dialogue_api.py  test_director.py  test_preview_api.py  test_unreal_api.py
cir/: README.md  pyproject.toml
cir/examples/: office-dialogue.cir.json
cir/schemas/: animation.schema.json  beat.schema.json  camera.schema.json  character.schema.json  cir-v0.1.schema.json  project.schema.json  scene.schema.json  shot.schema.json
cir/scripts/: export_schema.py
cir/src/: README.md
cir/src/cutsceneai_cir/: __init__.py  models.py  schema.py  validation.py
cir/src/cutsceneai_cir.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cir/tests/: test_models.py  test_schema.py  test_validation.py
dialogue/: README.md  pyproject.toml
dialogue/examples/: office-dialogue.dialogue-plan.json
dialogue/schemas/: dialogue-manifest-v0.1.schema.json  dialogue-plan-v0.1.schema.json
dialogue/scripts/: export_artifacts.py
dialogue/src/cutsceneai_dialogue/: __init__.py  audio.py  cli.py  errors.py  loading.py  models.py  planning.py  schema.py  serialization.py  service.py
dialogue/tests/: __init__.py  conftest.py  helpers.py  test_audio.py  test_loading.py  test_models_schema_cli.py  test_planning.py  test_service.py
docs/acceptance/: dialogue-engine-v0.1.md  unreal-adapter-v0.6.md
docs/releases/: unreal-adapter-v0.4.0.md
infrastructure/docker/: README.md
infrastructure/github-actions/: README.md
infrastructure/kubernetes/: README.md
preview/: README.md  pyproject.toml
preview/examples/: office-dialogue.preview.json
preview/schemas/: preview-v0.1.schema.json
preview/scripts/: export_artifacts.py
preview/src/cutsceneai_preview/: __init__.py  compiler.py  models.py  rendering.py  schema.py  serialization.py
preview/tests/: conftest.py  test_compiler.py  test_preview_schema.py  test_rendering.py
shared/fixtures/: README.md
shared/python/: README.md
shared/typescript/: README.md
tests/acceptance/: README.md
tests/fixtures/: README.md
tests/integration/: README.md
