[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutsceneai-backend"
version = "0.1.0"
description = "Backend API for CutSceneAI Studio"
requires-python = ">=3.11,<3.14"
dependencies = [
    "cutsceneai-cir>=0.1.0,<0.2.0",
    "cutsceneai-preview>=0.1.0,<0.2.0",
    "cutsceneai-unreal>=0.2.3,<0.3.0",
    "fastapi>=0.139.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0",
    "pydantic==2.13.4",
    "jsonschema>=4.22.0,<5.0.0",
    "openai>=2.45.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "httpx2>=2.0.0,<3.0.0",
    "ruff>=0.5.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
