[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutsceneai-cir"
version = "0.1.0"
description = "CIR models and validation utilities for CutSceneAI Studio"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cutsceneai_cir*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
