[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cutsceneai-unreal"
version = "0.2.2"
description = "Deterministic Unreal Sequencer export adapter for CutSceneAI Studio"
requires-python = ">=3.11,<3.14"
dependencies = [
    "cutsceneai-cir>=0.1.0,<0.2.0",
    "cutsceneai-preview>=0.1.0,<0.2.0",
    "pydantic==2.13.4"
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.22.0,<5.0.0",
    "mypy>=1.10.0,<2.0.0",
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "ruff>=0.5.0,<1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["cutsceneai_unreal*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
